...
                );
              })}
            </View>
          ) : null}
        </View>
        <ScrollView
          testID="tasks-screen__task_list"
          className="flex-1 bg-canvas px-4 dark:bg-canvas-dark"
          showsVerticalScrollIndicator={false}
          alwaysBounceVertical
          refreshControl={
            <RefreshControl
              testID="tasks-screen__refresh_control"
...
